# rac-be

./: Cargo.toml  ExampleSecrets.toml  Shuttle.toml
migrations/: 3_schema.sql  4_schema.sql  5_schema.sql
src/: controller.rs  main.rs  model.rs
src/controllers/: home.rs
